parser/tests/bad/arr05.st
% upper bound of a 'static array' must be positive

var arr: array 1..0 of int
